# LibianCrawlers

./: .gitignore  404.html  crawler_config_template.cfg  hashmap.json  index.html  package-lock.json  package.json  prevent_the_screen_saver.py  pyproject.toml  readme.md
assets/: app.0f8iFPEm.js  app.0okz_44K.js  app.0siIIenj.js  app.3cz7sJ5S.js  app.3zgVRLoI.js  app.53zMAHaL.js  app.5sUPrZTB.js  app.72LmQ0Od.js  app.9EJ5doJI.js  app.AV46fFed.js  app.B-JYS8qr.js  app.B2fkWMlg.js  app.B3TcodeM.js  app.B59mv7yR.js  app.B7Eg2tKT.js  app.B8M4sf3Q.js  app.B9c2jJVo.js  app.BFLDg9bf.js  app.BGaqOncZ.js  app.BHv5Y2ou.js  app.BMDF1jsi.js  app.BVW9tiD4.js  app.BbjJ7eYV.js  app.Bf7VUX6N.js  app.BkMG0MCS.js  app.BtOo4Ca5.js  app.Bu1wvSLw.js  app.Bu6cOzvJ.js  app.Bunwtdg6.js  app.ByHIK_fa.js  app.C084PDfC.js  app.C1TVEglx.js  app.C2bMzKJG.js  app.C6mSz5O0.js  app.CB98h0br.js  app.CEmnvWSO.js  app.CHI-jD1Q.js  app.CMOhkiDZ.js  app.CS9TzzRA.js  app.CUL6PA-D.js  (+3006 more)
assets/chunks/: @localSearchIndexroot.2xtW0RGq.js  @localSearchIndexroot.4TvihllL.js  @localSearchIndexroot.B0yur3wm.js  @localSearchIndexroot.B4E63W1g.js  @localSearchIndexroot.B4GZN56-.js  @localSearchIndexroot.B65KRgMC.js  @localSearchIndexroot.B6dPd99W.js  @localSearchIndexroot.BAg7AImC.js  @localSearchIndexroot.BAmcaXnL.js  @localSearchIndexroot.BCClN3TK.js  @localSearchIndexroot.BCRPCOLE.js  @localSearchIndexroot.BM5eBVjZ.js  @localSearchIndexroot.BMhJOht0.js  @localSearchIndexroot.Bj7ql5in.js  @localSearchIndexroot.BkjVdJv-.js  @localSearchIndexroot.Bnp09APp.js  @localSearchIndexroot.Bo4bAujE.js  @localSearchIndexroot.Bzwez0hH.js  @localSearchIndexroot.C03n3DzF.js  @localSearchIndexroot.C0KMfwms.js  @localSearchIndexroot.CPAqMNNv.js  @localSearchIndexroot.CQ5QXzf8.js  @localSearchIndexroot.CQAubUkN.js  @localSearchIndexroot.CSgw4I5P.js  @localSearchIndexroot.CWcNCCD9.js  @localSearchIndexroot.C_7eMGhL.js  @localSearchIndexroot.CcSkDffe.js  @localSearchIndexroot.Cd-SR_iP.js  @localSearchIndexroot.CeM4wYM1.js  @localSearchIndexroot.CeNwVxQm.js  @localSearchIndexroot.Cio7K0bt.js  @localSearchIndexroot.CpT9eGhb.js  @localSearchIndexroot.CrWUGPee.js  @localSearchIndexroot.CvZ8b5EQ.js  @localSearchIndexroot.CvwB4Sku.js  @localSearchIndexroot.D-m1dkYD.js  @localSearchIndexroot.D2mLPfHu.js  @localSearchIndexroot.D4Q2K61O.js  @localSearchIndexroot.D5g9c6yA.js  @localSearchIndexroot.D8AdBv50.js  (+1539 more)
data_cleaner_ci/: .gitignore  code_gen.ts  code_gen_help.txt  code_gen_v2.ts  config.test.ts  config.ts  config_test.ts  consts.ts  data_process_graph.ts  data_process_graph_default_v1.ts  deno.json  find_str_in_cache_files.ts  find_str_in_cache_files_help.txt  init_config.ts  network.test.ts  pg.ts  pull_table.ts  quicktypeutil.ts  readme.md  start_dev_jsonata.ts  user_code  util.ts  utils.test.ts  utils_test.ts
data_cleaner_ci/fastype/: fastype_test.ts  index.ts  readme.md
data_cleaner_ci/general_data_process/: chat_message.ts  image_analysis.ts  literature.ts  media.ts  nocodbutil.test.ts  nocodbutil.ts  paragraph_analysis.test.ts  paragraph_analysis.ts  readme.md  shop_good.ts
data_cleaner_ci/general_dp_graph/: caches.ts  cleaner_for_libian_crawler.ts  media.ts  readme.md
data_cleaner_ci/jsonata_templates/: jsonata_test.ts  parse_html_tree.jsonata
data_cleaner_ci/serialize-anything/: dca-library.ts  deepCopyAll.ts  license.txt  serialize-any.ts
data_cleaner_ci/subproc/: quicktype_gen.ts
data_cleaner_ci/workers/: evaluate_jsonata_exp.ts
develop/: index.html  roadmap.html
develop/crawler/: crawler-and-criminal-law.html  init-config.html  install.html  start-crawl.html  start-smart-crawl.html  start-test.html  steps.html  third-part-crawler-integration.html
develop/data_cleaner_ci/: init-config.html  install.html  start-code-gen.html  start-data-clean.html  start-data-computed-after-clean.html
develop/datalake/: deploy-dev.html  deploy-pro.html  deploy.html  service-arch.html  service-architecture.html
develop/editable_sheet/: whats-editable-sheet.html
develop/worker/: identity-of-node.html  ui-design.html  whats-worker.html
docs/: index.md
docs/.vitepress/: config.mts
docs/develop/: index.md  roadmap.md
docs/guide/: index.md  learn-about-libiancrawler.md  when-data-clean.md  when-data-crawl.md  when-data-protect.md  when-data-storage-and-visualization.md
guide/: index.html  learn-about-libiancrawler.html  when-data-clean.html  when-data-crawl.html  when-data-protect.html  when-data-storage-and-visualization.html
libiancrawlers/app_util/: app_init.py  cmdarg_util.py  config.py  gui_util.py  locales.py  magic_util.py  obj2dict_util.py  playwright_util.py  postgres.py  print_version.py  search.py  types.py
libiancrawlers/bilibili/: search.py
libiancrawlers/camoufox_server/: best_launch_options.py  launch.py  launch_camoufox_server.py  test_connect.py
libiancrawlers/common/: __init__.py  app_init.py  config.py  crawlers_util.py  login.py  magic_util.py  playwright_util.py  postgres.py  search.py  timefmt.py  types.py
libiancrawlers/crawlers/: __init__.py
libiancrawlers/taobao/: search.py
libiancrawlers/tasks/: start_tasks.py
libiancrawlers/tasks_api_server/: find_journal.py
libiancrawlers/util/: bytesutil.py  coroutines.py  dicts.py  exceptions.py  fs.py  iter.py  jsons.py  plat.py  shell.py  timefmt.py
libiancrawlers/webpage/: smart_extract.py
libiancrawlers/worker/: core.py  node.py  task.py  test_core.py  ui.py
steps/: apnews-search.json  baidu.json  cnki-search.json  cqvip-search.json  embase-download-paths.json  embase-search.json  gemini-deep-research.json  qianniu-message-export.json  readme.md  reuters-search.json  scroll-down-v1.json  taobao-search.json  taobao-search.json5  wanfangdata-search.json  washington-post-search.json  webofscience-download-paths.json  webofscience-download.json  xiaohongshu-search.json  xiaohongshu.json  xiaohongshu.json5  yangkeduo-mobile-search.json
steps/schemas/: main.json  (+1 more)
wait_steps/: readme.md  taobao-search.json5  yangkeduo-mobile-search.json5
worker-ui/: README.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
(+189 files in other folders)
