[tool.poetry]
name = "libiancrawlers"
version = "0.1.0"
description = "Fxxxxxking crawlers"
authors = ["Your Name <you@example.com>"]
license = "fuck"

[tool.poetry.dependencies]
python = "~3.9"
curl-cffi = "^0.7.3"
loguru = "^0.7.2"
fire = "^0.7.0"
json5 = "^0.9.28"
random-user-agent = "^1.0.1"
ratelimit = "^2.2.1"
backoff = "^2.2.1"
async-to-sync = "^0.2.3"
aioify = "^0.4.1"
asyncpg = "^0.30.0"
confection = "^0.1.5"
charset-normalizer = "^3.4.1"
python-magic-bin = "0.4.14"
bs4 = "^0.0.2"
pytest-asyncio = "^0.25.1"
filetype = "^1.2.0"
gooey = "^1.0.8.1"
wxpython = "^4.2.2"

[tool.poetry.dev-dependencies]


[tool.poetry.group.test]
optional = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest = "^8.2.0"

[tool.poetry.group.crawler-xiaohongshu]
optional = true

[tool.poetry.group.crawler-xiaohongshu.dependencies]
xhs = "^0.2.13"

[tool.poetry.group.crawler-bilibili]
optional = true

[tool.poetry.group.crawler-bilibili.dependencies]
bilibili-api-dev = "^16.2.0b1"

[tool.poetry.group.crawler-zhihu]
optional = true

[tool.poetry.group.crawler-zhihu.dependencies]
pyexecjs = "^1.5.1"
camoufox = { extras = ["geoip"], version = "^0.3.10" }

[tool.poetry.group.camoufox-server.dependencies]
camoufox = { extras = ["geoip"], version = "^0.3.10" }

[tool.poetry.scripts]
#xiaohongshu-search = "libiancrawlers.xiaohongshu.search:cli"
#bilibili-search = "libiancrawlers.bilibili.search:cli"
#taobao-search = "libiancrawlers.taobao.search:cli"
#zhihu-search = "libiancrawlers.zhihu.search:cli"
#launch-camoufox-server = "libiancrawlers.camoufox_server.launch_camoufox_server:cli"
camoufox-to-browser-scan = "libiancrawlers.app_util.camoufox_util.test_connect:to_browser_scan"
#camoufox-to-ip138 = "libiancrawlers.camoufox_server.test_connect:to_ip138"
#launch-dns-proxy = "libiancrawlers.common.networks.dnsproxy:cli"
smart-crawl = "libiancrawlers.crawlers.smart_crawl.smart_crawl:cli"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
