[tool.poetry]
name = "libiancrawlers"
version = "0.1.0"
description = "Fxxxxxking crawlers"
authors = ["Your Name <you@example.com>"]
license = "fuck"

[tool.poetry.dependencies]
python = "~3.9"
curl-cffi = "^0.7.3"
loguru = "^0.7.2"
fire = "^0.7.0"
json5 = "^0.9.28"
random-user-agent = "^1.0.1"
ratelimit = "^2.2.1"
backoff = "^2.2.1"
async-to-sync = "^0.2.3"
aioify = "^0.4.1"
asyncpg = "^0.30.0"
confection = "^0.1.5"
charset-normalizer = "^3.4.1"
bs4 = "^0.0.2"
pytest-asyncio = "^0.25.1"
filetype = "^1.2.0"
gooey = "^1.0.8.1"
wxpython = "^4.2.2"
camoufox = { extras = ["geoip"], version = "^0.3.10" }
aiofiles = "^24.1.0"
python-magic = "0.4.27"
pypiwin32 = {version = "^223", platform = "win32"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
setuptools = "^75.8.0"

[tool.poetry.group.test]
optional = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest = "^8.2.0"

[tool.poetry.group.crawler-apilib-xiaohongshu]
optional = true

[tool.poetry.group.crawler-apilib-xiaohongshu.dependencies]
xhs = "^0.2.13"

[tool.poetry.group.crawler-apilib-bilibili]
optional = true

[tool.poetry.group.crawler-apilib-bilibili.dependencies]
bilibili-api-dev = "^16.2.0b1"

[tool.poetry.group.crawler-apilib-zhihu]
optional = true

[tool.poetry.group.crawler-apilib-zhihu.dependencies]
pyexecjs = "^1.5.1"


[tool.poetry.scripts]
camoufox-to-browser-scan = "libiancrawlers.app_util.camoufox_util.test_connect:to_browser_scan"
smart-crawl = "libiancrawlers.crawlers.smart_crawl.smart_crawl:cli"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
