[tool.poetry]
name = "libiancrawlers"
version = "0.1.0"
description = "Fxxxxxking crawlers"
authors = ["Your Name <you@example.com>"]
license = "fuck"

[tool.poetry.dependencies]
python = ">=3.9.2,<3.10"
curl-cffi = "^0.7.3"
loguru = "^0.7.2"
fire = "^0.7.0"
json5 = "^0.9.28"
random-user-agent = "^1.0.1"
ratelimit = "^2.2.1"
backoff = "^2.2.1"
async-to-sync = "^0.2.3"
aioify = "^0.4.1"
asyncpg = "^0.30.0"
confection = "^0.1.5"
charset-normalizer = "^3.4.1"
bs4 = "^0.0.2"
pytest-asyncio = "^0.25.1"
filetype = "^1.2.0"
gooey = "^1.0.8.1"
wxpython = "^4.2.2"
camoufox = { extras = ["geoip"], version = "^0.4.11" }
aiofiles = "^24.1.0"
python-magic = "0.4.27"
pypiwin32 = { version = "^223", platform = "win32" }
miniopy-async = "^1.21.1"
opentelemetry-instrumentation-urllib = "^0.52b1"
fastapi = { extras = ["standard"], version = "^0.115.12" }
pywebview = "^5.4"
aiohttp = "^3.11"
cryptography = "^44.0.2"
aioquic = "^1.2.0"
aioudp = "^2.0.0"
multiaddr = "^0.0.9"
python-dateutil = "^2.9.0.post0"
typing-extensions = "^4.13.2"
pydantic = "^2.11.3"
urllib3 = "^2.4.0"
jsonschema = { extras = ["format"], version = "^4.24.0" }
js2py = "^0.74"
html-to-markdown = "^1.4.0"
pandas = "^2.3.1"
xlrd = "^2.0.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
setuptools = "^75.8.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.apicrawler-entrezapi]
optional = true

[tool.poetry.group.apicrawler-entrezapi.dependencies]
biopython = "^1.85"

[tool.poetry.group.apicrawler-bilibili]
optional = true

[tool.poetry.group.apicrawler-bilibili.dependencies]
bilibili-api-python = "^17.1.4"

[tool.poetry.group.apicrawler-impactfactor]
optional = true

[tool.poetry.group.apicrawler-impactfactor.dependencies]
impact-factor = "^1.1.2"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"















[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
camoufox-to-check-leak-website = "libiancrawlers.app_util.camoufox_util.camoufox_tests:to_check_leak_website"
camoufox-to-check-go-back-button-available = "libiancrawlers.app_util.camoufox_util.camoufox_tests:to_check_go_back_button_available"
smart-crawl = "libiancrawlers.crawlers.smart_crawl.smart_crawl:cli"
start-worker-ui = "libiancrawlers.worker.ui:cli"
start-worker-core = "libiancrawlers.worker.core:cli"
api-crawl-entrezapi-search = "libiancrawlers.crawlers.apilib.entrezapi.search:cli"
api-crawl-impactfactor-search = "libiancrawlers.crawlers.apilib.impactfactor.search:cli"
smart-crawl-urls = "libiancrawlers.crawlers.smart_crawl.smart_crawl_urls:cli"
version = "libiancrawlers.app_util.print_version:cli"
generate-steps-api-documents = "libiancrawlers.crawlers.smart_crawl.steps_api:generate_steps_api_documents"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

